--- a/app/globals.css
+++ b/app/globals.css
@@ -80,7 +80,7 @@
 }
 
 .root {
-  @apply flex min-h-screen w-full flex-col bg-white lg:flex-row;
+  @apply flex h-screen w-full flex-col bg-white lg:flex-row overflow-hidden;
 }
 
 .root-container {
@@ -312,7 +312,7 @@
 
   /* Sidebar Component */
   .sidebar {
-    @apply hidden h-screen w-72 bg-white p-5 shadow-md shadow-purple-200/50 lg:flex;
+    @apply hidden h-screen w-72 bg-white p-5 shadow-md shadow-purple-200/50 lg:flex overflow-auto;
   }
 
   .sidebar-logo {
@@ -332,7 +332,7 @@
   }
 
   .sidebar-link {
-    @apply p-16-semibold flex size-full gap-4 p-4;
+    @apply p-16-semibold flex size-full gap-4 px-4 py-3;
   }
 
   /* TransformationForm Component */
